# simple-linear-regression

./: README.md  pyproject.toml
api/: reg_model_api.py
models/: reg_model.pkl
notebooks/: Preços_de_Imóveis_Utilizando_Regressão_Linear.ipynb  score_model.ipynb
