[tool.poetry]
name = "simple-linear-regression"
version = "0.1.0"
description = ""
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
statsmodels = "^0.14.4"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pingouin = "^0.5.5"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
